--- a/clicker/frontend/templates/index.html
+++ b/clicker/frontend/templates/index.html
@@ -8,9 +8,31 @@
     <script type="text/javascript" src="{% static 'js/index.js' %}"></script>
 </head>
 <body>
-    <main class="container">
-        <div id="coins">{{core.coins}}</div>
-        <button onclick="call_click()">Жёсткий фарм</button>
+    <main class="app">
+        <nav class="nav">
+            Привет, {{user.username}}
+            <a href="{% url 'logout' %}">Выйти</a>
+        </nav>
+        <div class="container">
+            <div id="coins">{{core.coins}}</div>
+            <button onclick="call_click()">Жёсткий фарм</button>
+            <p>
+                Мощь фарма: <span id="click_power">{{ core.click_power }}</span>
+            </p>
+        </div>
+
+        <aside class="boosts" id="boosts">
+            <h3>Бусты</h3>
+            <div class="boosts-holder" id="boosts-holder">
+                {% for boost in boosts %}
+                <button class="boost" id="boost_{{boost.id}}" onclick="buy_boost_{{boost.id}}">
+                    <p>Уровень: <span id="boost_level">{{boost.lvl}}</span></p>
+                    <p>+<span id="boost-power">{{boost.power}}</span></p>
+                    <p>Цена: <span id="boost_price">{{boost.price}}</span></p>
+                </button>
+                {% endfor %}
+            </div>
+        </aside>
     </main>
 </body>
 </html>
