--- a/clicker/frontend/templates/index.html
+++ b/clicker/frontend/templates/index.html
@@ -25,7 +25,7 @@
             <h3>Бусты</h3>
             <div class="boosts-holder" id="boosts-holder">
                 {% for boost in boosts %}
-                <button class="boost" id="boost_{{boost.id}}" onclick="buy_boost_{{boost.id}}">
+                <button class="boost" id="boost_{{boost.id}}" onclick="buy_boost({{boost.id}})">
                     <p>Уровень: <span id="boost_level">{{boost.lvl}}</span></p>
                     <p>+<span id="boost-power">{{boost.power}}</span></p>
                     <p>Цена: <span id="boost_price">{{boost.price}}</span></p>
