--- a/clicker/frontend/templates/login.html
+++ b/clicker/frontend/templates/login.html
@@ -1,42 +1,57 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="ru" dir="ltr">
   <head>
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <meta charset="utf-8">
-    <title>Title </title>
+    <link rel="stylesheet" href="{% static 'css/login.css' %}" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <meta charset="utf-8" />
+    <title>Авторизация</title>
   </head>
-  <body>
+  <body class="login-page">
     <div class="header">
-      <h3 class="site-name">LOGIN</h3>
-       
-      </div>
-    <main>
-    <div align="center">
-      <form method="post" action="{% url 'login' %}" >
-        {% csrf_token %}
-        
-        <div class="form-group">
-            <label for="username"> Username: </label>
-            <br>
-            <input type="text" name="username" id="username" placeholder="Username">
-        </div>
-        <div class="form-group">
-            <label for="password"> Password: </label>
-            <br>
-            <input type="password" name="password" id="password" placeholder="Password">
-        </div>
-        <div class="form-group">
-          <input type="submit" value="Login">
-        </div>
-       {% if invalid%}
-       <p> Incorrect login or password. </p>
-       {% endif %}
-      </form>
-      
+      <h3 class="site-name">Авторизация</h3>
     </div>
-    <div align="center">Or you can <a href="/registration">sign up</a></div>
+    <main>
+      <div align="center">
+        <form method="post" action="{% url 'login' %}">
+          {% csrf_token %}
+
+          <div class="form-group">
+            <label for="username"> Никнейм: </label>
+            <br />
+            <input
+              type="text"
+              name="username"
+              id="username"
+              placeholder="Никнейм"
+            />
+          </div>
+          <div class="form-group">
+            <label for="password"> Пароль: </label>
+            <br />
+            <input
+              type="password"
+              name="password"
+              id="password"
+              placeholder="Пароль"
+            />
+          </div>
+          <div class="form-group">
+            <input class="login-btn" type="submit" value="Войти" />
+          </div>
+          {% if invalid%}
+          <p>Некорректный никнейм или пароль.</p>
+          {% endif %}
+        </form>
+      </div>
+      <div class="sign-in-wrapper" align="center">
+        <a href="/registration">Зарегистрироваться</a>
+      </div>
     </main>
   </body>
 </html>
