--- a/clicker/frontend/templates/registration.html
+++ b/clicker/frontend/templates/registration.html
@@ -1,31 +1,50 @@
-	
 {% load static %}
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link rel="stylesheet" href="{% static '/css/style.css' %}">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <meta charset="utf-8">
-    <title>Title </title>
+    <link rel="stylesheet" href="{% static '/css/registration.css' %}" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <meta charset="utf-8" />
+    <title>Регистрация</title>
   </head>
-  <body>
+  <body class="registration-page">
     <div class="header">
-      <h3 class="site-name">REGISTRATION</h3>
-       
-      </div>
+      <h3 class="site-name">Регистрация</h3>
+    </div>
     <main>
-    <div align="center">
-      <form method="post" action="{% url 'registration' %}">
-        {%csrf_token%}
-        {{form.as_p}}
-        <input type="submit" value="SIGN UP">
+      <div align="center">
+        <form method="post" action="{% url 'registration' %}">
+          <!-- {%csrf_token%} {{form.as_p}} -->
+          {% csrf_token %}
+          <div class="form-group">
+            <label for="id_username">Никнейм:</label>
+            {{ form.username }}
+          </div>
+          <div class="form-group">
+            <label for="id_password">Пароль:</label>
+            {{ form.password }}
+          </div>
+          <div class="form-group">
+            <input
+              class="registration-btn"
+              type="submit"
+              value="Зарегистрироваться"
+            />
+          </div>
         </form>
         {% if invalid%}
-       <p>This username is already taken! Please choose another oneq12e312312!</p>
-       {% endif %}
-    </div>
-    <br>
-    <div align="center">Or you can <a href="/login">sign in</a></div>
-  </main>
+        <p>Этот никнейм уже занят! Пожалуйста попробуйте другой</p>
+        {% endif %}
+      </div>
+      <br />
+      <div class="login-wrapper" align="center">
+        <a href="/login">Уже зарегистрирован</a>
+      </div>
+    </main>
   </body>
 </html>
